@@ -1070,16 +1070,21 @@ namespace
       CHECK_FALSE(view6 != view7);
     }
 
+    //*************************************************************************
     TEST(test_convert_span_any_to_span_byte)
     {
-      /* mutable */ float data[2]{3.141592f, 2.71828f};
+      float data[2]{3.141592f, 2.71828f};
 
-      auto const const_bytes = etl::as_bytes(etl::span{data});
-      auto const writable_bytes = etl::as_writable_bytes(etl::span{data});
+#if ETL_USING_CPP17
+      auto const const_bytes    = etl::as_bytes(etl::span{ data });
+      auto const writable_bytes = etl::as_writable_bytes(etl::span{ data });
+#else
+      auto const const_bytes    = etl::as_bytes(etl::span<float, 2>(data));
+      auto const writable_bytes = etl::as_writable_bytes(etl::span<float, 2>(data));
+#endif
 
-      CHECK_TRUE(const_bytes.size() == sizeof(data));
-      CHECK_TRUE(writable_bytes.size() == sizeof(data));
-
+      CHECK_EQUAL(const_bytes.size(),    sizeof(data));
+      CHECK_EQUAL(writable_bytes.size(), sizeof(data));
     }
 
 #include "etl/private/diagnostic_pop.h"
